Fixed shop-by-categroies covering item names

--- a/high-fidelity-prototype/provider-prototype/css/index.css
+++ b/high-fidelity-prototype/provider-prototype/css/index.css
@@ -60,7 +60,7 @@
 }
 
 .featured {
-    padding-top: 30px;
+    padding: 30px 0px 30px;
     position: relative;
 }
 
